# safeprobe

./: .gitignore  LICENSE  README.md  quick_test.py  requirements.txt  run_composite_eval.sh
configs/: gpt4.yaml  gpt4_full.yaml  gpt5.yaml  gpt5_full.yaml  llama.yaml  llama_full.yaml  mistral.yaml  mistral_full.yaml  qwen.yaml  qwen_full.yaml
reports/: safeprobe_report.json  safeprobe_report.txt
results/: cipherchat_results.json  consolidated.csv  pair_results.json  promptmap_results.json
results/gpt4/: composite_results.json  consolidated.csv
src/safeprobe/: __init__.py  cli.py  config.py  pyproject.toml
src/safeprobe/analysis/: __init__.py  agreement.py  consolidator.py  judge.py  multi_judge.py  report_gen.py
src/safeprobe/analysis/judges/: __init__.py  base.py  deepseek.py  harmbench.py  llama_guard.py
src/safeprobe/attacks/: __init__.py
src/safeprobe/attacks/cipherchat/: __init__.py  attack.py  cli.py
src/safeprobe/attacks/composite/: __init__.py  attack.py  composer.py
src/safeprobe/attacks/composite/transformers/: __init__.py  competing_objectives.py  mismatched_generalization.py
src/safeprobe/attacks/nanoGCG/: __init__.py  attack.py  cli.py
src/safeprobe/attacks/nanoGCG/rules/: teste_simples.yaml
src/safeprobe/attacks/pair/: __init__.py  attack.py  cli.py
src/safeprobe/attacks/promptmap/: __init__.py  attack.py  cli.py
src/safeprobe/datasets/: __init__.py  adapters.py  prompts.py
src/safeprobe/tests/: test_safeprobe.py
src/safeprobe/utils/: __init__.py  logging.py  open_ai_helper.py  unified_lib.py
